--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,27 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/main_text_view"/>
+    <EditText
+            android:id="@+id/plain_text_input"
+            android:layout_height="49dp"
+            android:layout_width="348dp"
+            android:inputType="text"
+            android:layout_marginTop="62dp"
+            app:layout_constraintTop_toBottomOf="@+id/main_text_view" android:layout_marginBottom="47dp"
+            app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="31dp" android:layout_marginStart="31dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"></EditText>
+    <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/button"
+            android:layout_marginTop="47dp"
+            app:layout_constraintTop_toBottomOf="@+id/plain_text_input" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="150dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"
+            android:layout_marginRight="162dp"
+            android:onClick="changeText"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
